--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "./build",
-    // "declaration": true,
-    "allowJs": true,
+    "declaration": true,
+    // "allowJs": true,
     "target": "es2015",
     "module": "es2015",
     "moduleResolution": "node",
